﻿v1.3.9

New: Safe's Unit Library (LibSUnit)
* Note: This is still classed as alpha and subject to change. (Although, I would say the event layout is pretty much final)
* Removed: Safe's Raid Manager (LibSRM - Depreciated)

Unit Tracking
* Removed: All related code to unit tracking has been removed and replaced by LibSUnit.
* Change: All previous Unit Detail lookups and comparisons have been replaced by Events with Unit Objects.
* Note: This may take some time to iron out any glitches in the system (major overhaul).

Plug-Ins
* New: KBM now had the ability to check for a Min version for any Plug-Ins.
* Change: Plug-Ins now require a .Version table, which includes at least Version:Load() and Version:Check(Revision)

Endless Eclipse
* Progenitor Saetos
** New: UTID updated.
* Juntun
** New: UTID udpated.
* Ebassi
** New: UTID updated.
* Arebus
** New: UTID udpated.
* Rhu'Megar
** New: UTID updated.

Frozen Tempest
*  Artifex Zaviel
** New: Enrage timer added for 7 minutes.
* Kolmasveli and Toinenveli
** New: Enrage timer added for 7 minutes.
** New: Tank-Swap enabled for both Ire debuffs.
** New: Added Alert for Kolmasveli's Glimpse of Infinity channel. (Verbose "Hide from Kolmasveli!")
** New: Added Alert for Toinenveli's Glimpse of Infinity channel. (Verbose "Hide from Toinenveli!")
** Change: This encounter will now correctly trigger a victory only after both bosses have died, not just Kolmasveli.
** New: Added a persistent Castbar for Toinenveli.
** New: Phase Tracking for 50%, 30% and 10% added for both bosses. Intiatial system, may be revised.

Triumph of the Dragon Queen
* Grand Falconer Zoles
** Fixed: Should now return the correct Unit Object during new add spawns.

Experts
Empyrean Core
* Baird Bringhurst
** New: Enrage timer added for 13.5 minutes.

Tower of the Shattered
* Psychophage Primakov
** New: Enrage timer added for 8 mintues (Estimate)

----
v1.3.8

* Percentage Monitor
** Fixed: UnitID Percent refence object error. (2962)

Storm Legion
