@@ -4,6 +4,9 @@ New: Safe's Unit Library (LibSUnit)
 * Note: This is still classed as alpha and subject to change. (Although, I would say the event layout is pretty much final)
 * Removed: Safe's Raid Manager (LibSRM - Depreciated)
 
+Tank-Swap
+* New: Ability to track agro from 2 Bosses (Experimental)
+
 Unit Tracking
 * Removed: All related code to unit tracking has been removed and replaced by LibSUnit.
 * Change: All previous Unit Detail lookups and comparisons have been replaced by Events with Unit Objects.
@@ -33,6 +36,11 @@ Frozen Tempest
 ** New: Tank-Swap enabled for both Ire debuffs.
 ** New: Added Alert for Kolmasveli's Glimpse of Infinity channel. (Verbose "Hide from Kolmasveli!")
 ** New: Added Alert for Toinenveli's Glimpse of Infinity channel. (Verbose "Hide from Toinenveli!")
+** New: Enabled new Multi-Tank Aggro feature in Tank-Swap.
+** New: Added Personal Alert and Mechanic Spy for Sparking Eruption.
+** New: Added Alert and Stop Trigger for Energy Vortex casting Tempest Flare.
+** New: Added a Castbar for Energy Vortex.
+** New: Added Unit Tracking for Energy Vortex.
 ** Change: This encounter will now correctly trigger a victory only after both bosses have died, not just Kolmasveli.
 ** New: Added a persistent Castbar for Toinenveli.
 ** New: Phase Tracking for 50%, 30% and 10% added for both bosses. Intiatial system, may be revised.
